Initial commit for problem

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
   <title>My AngularJS App</title>
 </head>
-<body ng-app="myApp" ng-controller="MainCtrl">
+<!-- TODO: initialize app -->
+<body>
 
   <h1>PriceGuessr</h1>
-  <div ng-include="'static/templates/game.html'">
+  <!-- TODO: include an HTML snippet -->
 
   </div>
 
